# pyx2pxd

./: CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build copy.yml  build.yml  build_and_deploy.yml  deploy.yml  package_test.yml
docs/: Makefile  conf.py  index.html  installation.rst  pyx2pxd.html  search.js  src.html
docs/pyx2pxd/: cli.html  pyx2pxd.html
docs/src/: pyx2pxd.html
docs/src/pyx2pxd/: cli.html  pyx2pxd.html
pyx2pxd/: .travis.yml  AUTHORS.rst  README.rst  cli.py  setup.cfg  tox.ini
pyx2pxd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pyx2pxd/.github/: ISSUE_TEMPLATE.md
pyx2pxd/docs/: index.rst  make.bat  usage.rst
pyx2pxd/tests/: test_pyx2pxd.py
sandbox/: hello.c  hello.pyx  hello2.c  hello2.pxd  hello2.pyx
src/pyx2pxd/: __init__.py  cli.py  pyx2pxd.py
tests/: __init__.py  test_pyx2pxd.py
